--- a/app/src/main/res/layout/race_codes.xml
+++ b/app/src/main/res/layout/race_codes.xml
@@ -12,11 +12,13 @@
         android:id="@+id/id_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/rc_title"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,26 +27,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="48dp" />
+        app:layout_constraintGuide_begin="64dp" />
 
     <Button
         android:id="@+id/id_rc_btn_R"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/btn_selector"
         android:text="@string/rc_R"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/id_top_guideline"
-        android:background="@drawable/btn_selector"/>
+        app:layout_constraintTop_toTopOf="@+id/id_top_guideline" />
         <!--android:background="@drawable/btn_round"/>-->
 
     <Button
         android:id="@+id/id_rc_btn_T"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:text="@string/rc_T"
         app:layout_constraintStart_toEndOf="@+id/id_rc_btn_R"
         app:layout_constraintTop_toTopOf="@+id/id_top_guideline" />
@@ -53,8 +55,8 @@
         android:id="@+id/id_rc_btn_G"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:text="@string/rc_G"
         app:layout_constraintStart_toEndOf="@+id/id_rc_btn_T"
         app:layout_constraintTop_toTopOf="@+id/id_top_guideline" />
@@ -63,8 +65,8 @@
         android:id="@+id/id_rc_btn_S"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:text="@string/rc_S"
         app:layout_constraintStart_toEndOf="@+id/id_rc_btn_G"
         app:layout_constraintTop_toTopOf="@+id/id_top_guideline" />
@@ -74,17 +76,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="112dp" />
+        app:layout_constraintGuide_begin="144dp" />
 
     <Button
         android:id="@+id/id_rc_btn_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="32dp"
         android:text="OK"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/id_rc_btn_cancel"
         app:layout_constraintTop_toTopOf="@+id/id-bottom_guideline" />
 
@@ -92,9 +96,9 @@
         android:id="@+id/id_rc_btn_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
         android:text="Cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
