--- a/app/src/main/res/layout/row_race.xml
+++ b/app/src/main/res/layout/row_race.xml
@@ -17,56 +17,57 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="@string/abbrv_city_code"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:id="@+id/id_tv_city_code"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:textAppearance="@android:style/TextAppearance.Material.Large"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp" />
-
-        <TextView
-            android:text="@string/abbrv_race_code"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/abbrv_city_code"
+            android:textAppearance="@android:style/TextAppearance.Material.Large"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/id_tv_race_code"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/id_tv_race_code"
-            app:layout_constraintLeft_toRightOf="@+id/id_tv_city_code"
-            android:textAppearance="@android:style/TextAppearance.Material.Large"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp" />
-
-        <TextView
-            android:text="@string/abbrv_race_no"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/abbrv_race_code"
+            android:textAppearance="@android:style/TextAppearance.Material.Large"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintLeft_toRightOf="@+id/id_tv_city_code"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/id_tv_race_no"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/id_tv_race_code"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/abbrv_race_no"
             android:textAppearance="@android:style/TextAppearance.Material.Large"
             app:layout_constraintBaseline_toBaselineOf="@+id/id_tv_race_sel"
-            android:layout_marginTop="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp" />
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:text="@string/abbrv_race_sel"
+            android:id="@+id/id_tv_race_sel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/id_tv_race_sel"
-            android:textAppearance="@android:style/TextAppearance.Material.Large"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toRightOf="@+id/id_tv_race_no"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="16dp"
+            android:text="@string/abbrv_race_sel"
+            android:textAppearance="@android:style/TextAppearance.Material.Large"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp" />
+            app:layout_constraintStart_toStartOf="@+id/guideline2"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/id_tv_race_time"
@@ -92,6 +93,20 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/id_tv_race_time" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            card_view:layout_constraintGuide_begin="56dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            card_view:layout_constraintGuide_begin="96dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
