--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/id_edit_fragment2"
+    android:id="@+id/id_edit_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragment.EditFragment">
