--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -4,5 +4,6 @@
 
     <integer name="edit_race_new">0</integer>
     <integer name="edit_race_existing">1</integer>
-    <integer name="delete_race">2</integer>
+    <integer name="edit_race_copy">2</integer>
+    <integer name="delete_race">3</integer>
 </resources>
