--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574b</color>
     <color name="colorAccent">#d81b60</color>
+    <color name="colorOrange">#ff5722</color>
 
-    <color name="myBlue">#7198DD</color>
-    <color name="myWhite">#FFF</color>
+    <!--<color name="myBlue">#7198DD</color>-->
+    <!--<color name="myWhite">#FFF</color>-->
 </resources>
