--- a/app/src/main/res/menu/menu_refresh.xml
+++ b/app/src/main/res/menu/menu_refresh.xml
@@ -3,8 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="ui.MainFragment">
+
     <item android:id="@+id/id_refresh"
         android:title="@string/lbl_refresh"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"/>
+
+    <item android:id="@+id/id_settings"
+        android:title="@string/lbl_settings"
+        android:orderInCategory="101"
+        app:showAsAction="never"/>
+
 </menu>
