--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/mainFragment_to_editFragment"
             app:destination="@id/id_edit_fragment" />
+        <action
+            android:id="@+id/mainFragment_to_settingsFragment"
+            app:destination="@id/id_settings_fragment" />
     </fragment>
     <fragment
         android:id="@+id/id_edit_fragment"
@@ -21,7 +24,15 @@
         android:label="EditFragment"
         tools:layout="@layout/edit_fragment">
         <action
-            android:id="@+id/action_id_edit_fragment2_to_id_main_fragment"
+            android:id="@+id/editFragment_to_mainFragment"
+            app:destination="@id/id_main_fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/id_settings_fragment"
+        android:name="mcssoft.com.racereminderac.ui.fragment.SettingsFragment"
+        android:label="Settings" >
+        <action
+            android:id="@+id/settingsFragment_to_mainFragment"
             app:destination="@id/id_main_fragment" />
     </fragment>
 </navigation>
