--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -8,6 +8,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.MainFragment">
 
+    <!--<TextView-->
+        <!--android:id="@+id/textView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="TextView" />-->
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/id_recyclerView"
         android:layout_width="match_parent"
