--- a/app/src/main/res/layout/toolbar_base.xml
+++ b/app/src/main/res/layout/toolbar_base.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/id_toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,12 +8,12 @@
     android:background="?attr/colorPrimary"
     android:theme="?attr/actionBarTheme">
 
-    <!--<TextView-->
-        <!--android:id="@+id/toolbar_title"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textColor="@android:color/white"-->
-        <!--style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"-->
-        <!--android:layout_gravity="center"/>-->
+    <TextView
+        android:id="@+id/toolbar_title"
+        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:text="Count=x" />
 
 </androidx.appcompat.widget.Toolbar>
