--- a/app/src/main/res/layout/toolbar_base.xml
+++ b/app/src/main/res/layout/toolbar_base.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/id_toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,11 +10,11 @@
     android:theme="?attr/actionBarTheme">
 
     <TextView
-        android:id="@+id/toolbar_title"
+        android:id="@+id/id_toolbar_count"
         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:text="Count=x" />
+        android:layout_marginEnd="8dp" />
 
 </androidx.appcompat.widget.Toolbar>
