--- a/app/src/main/res/layout/multisel_fragment.xml
+++ b/app/src/main/res/layout/multisel_fragment.xml
@@ -48,33 +48,34 @@
         android:src="@drawable/ic_add_circle_24px"
         app:layout_constraintBottom_toBottomOf="@+id/id_np_multi_sel"
         app:layout_constraintStart_toEndOf="@+id/id_np_multi_sel"
-        app:layout_constraintTop_toTopOf="@+id/id_np_multi_sel" />
+        app:layout_constraintTop_toTopOf="@+id/id_np_multi_sel"
+        tools:ignore="ContentDescription" />
 
     <Button
         android:id="@+id/id_btn_multi_sel_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
         android:text="@string/lbl_cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/id_np_multi_sel" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <Button
         android:id="@+id/id_btn_multi_sel_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="32dp"
         android:text="@string/lbl_ok"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/id_btn_multi_sel_cancel"
-        app:layout_constraintTop_toBottomOf="@+id/id_np_multi_sel" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <TextView
         android:id="@+id/id_tv_multi_sel_1"
@@ -91,7 +92,7 @@
         android:layout_width="128dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Selections"
+        android:text="@string/lbl_selections"
         app:layout_constraintEnd_toEndOf="@+id/id_tv_multi_sel_4"
         app:layout_constraintStart_toStartOf="@+id/id_tv_multi_sel_1"
         app:layout_constraintTop_toBottomOf="@+id/id_tv_multi_sel_1" />
@@ -106,6 +107,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/id_btn_multi_sel_add"
         app:layout_constraintTop_toTopOf="@+id/id_btn_multi_sel_add"
-        app:srcCompat="@drawable/ic_remove_circle_24px" />
+        app:srcCompat="@drawable/ic_remove_circle_24px"
+        tools:ignore="ContentDescription" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="256dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_begin="256dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
